--- a/donation.html
+++ b/donation.html
@@ -2,15 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <title>Tiger Charity - Donation</title>
   </head>
   <header>
     <h1>Gallery</h1>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="donation.html">Donate</a></li>
+        <li class="nav_item"><a href="index.html">Home</a></li>
+        <li class="nav_item"><a href="gallery.html">Gallery</a></li>
+        <li class="nav_item"><a href="donation.html">Donate</a></li>
       </ul>
     </nav>
   </header>
@@ -24,7 +26,7 @@
       </div>
     </div>
     <div id="button">
-    
+
     </div>
     <footer>
       <ul>
