--- a/gallery.html
+++ b/gallery.html
@@ -2,20 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <title>Tiger Charity - Gallery</title>
   </head>
+  <header>
+    <h1>Gallery</h1>
+    <nav>
+      <ul>
+        <li class="nav_item"><a href="index.html">Home</a></li>
+        <li class="nav_item"><a href="gallery.html">Gallery</a></li>
+        <li class="nav_item"><a href="donation.html">Donate</a></li>
+      </ul>
+    </nav>
+  </header>
   <body>
-    <header>
-      <h1>Gallery</h1>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="donation.html">Donate</a></li>
-        </ul>
-      </nav>
-    </header>
-
     <div>
 
     </div>
